--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myApp",
+  "name": "crumblePad",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
@@ -20,8 +20,8 @@
     "typescript": "3.6.3"
   },
   "scripts": {
+    "devapp": "ionic serve --devapp",
     "start": "react-scripts start",
-    "browser": "ionic-app-scripts serve --sourceMap source-map --iscordovaserve --wwwDir platforms/browser/www/ --buildDir platforms/browser/www/build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
