--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "ionicons": "^4.6.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
     "typescript": "3.6.3"
   },
   "scripts": {
@@ -41,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "devDependencies": {
+    "redux-devtools": "^3.5.0"
+  }
 }
