--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@ionic/react": "^4.11.0",
-    "@ionic/react-router": "^4.11.0",
+    "@ionic/react": "^4.11.6",
+    "@ionic/react-router": "^4.11.6",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.12",
-    "@types/react": "^16.9.5",
+    "@types/node": "^12.12.17",
+    "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.1",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0",
+    "firebase": "^7.5.2",
     "ionicons": "^4.6.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
