--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ionicons": "^4.6.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-loader-spinner": "^3.1.5",
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^3.0.5",
     "react-router": "^5.1.0",
