--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crumblePad",
   "version": "0.0.1",
   "private": true,
+  "homepage": "http://dmitrijs-voronovs.github.io/crumblepad",
   "dependencies": {
     "@ionic/react": "^4.11.6",
     "@ionic/react-router": "^4.11.6",
@@ -30,7 +31,9 @@
     "start": "react-scripts start --env:.env",
     "build": "react-scripts build --env:.env",
     "test": "react-scripts test --env:.env",
-    "eject": "react-scripts eject --env:.env"
+    "eject": "react-scripts eject --env:.env",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,6 +52,7 @@
   },
   "description": "An Ionic project",
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "redux-devtools": "^3.5.0"
   }
 }
