--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
     "start": "react-scripts start --env:.env",
     "build": "react-scripts build --env:.env",
     "test": "react-scripts test --env:.env",
-    "eject": "react-scripts eject --env:.env",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject --env:.env"
   },
   "eslintConfig": {
     "extends": "react-app"
